--- a/SafeBus/res/values/strings.xml
+++ b/SafeBus/res/values/strings.xml
@@ -39,6 +39,12 @@ En ese grupo podrás compartir mejor tu perspectiva sobre esta campaña y el ser
     <string name="safebus_menu_encuentra">Encuentra</string>
     <string name="safebus_menu_reporta">Reporta</string>
     <string name="safebus_menu_conecta">Conecta</string>
+    
+    
+    <!-- Pagina 3 -->
+    <string name="paginas_instrucciones_titulo_3">En caso de violencia contra la mujer</string>
+    <string name="paginas_instrucciones_texto_pag_3">Recuerda que cuentas con el apoyo de InMujer en caso de que seas victima de algun delito sexual en el transporte público\n ¡por favor reporta cualquier abuso!\n\nLlama al:</string>
+    <string name="tel_inmujeres">52009632</string>
 
     <!-- Registro -->
     <string name="main_agregar_contacto">Agregar Contacto</string>
