--- a/SafeBus/res/values/strings.xml
+++ b/SafeBus/res/values/strings.xml
@@ -11,11 +11,10 @@
     <string name="mensaje_emergencia">Márcame a mi celular en cuanto puedas, por favor.</string>
     <string name="mensaje_emergencia_hint">Agrega un mensaje de emergencia</string>
 
-
     <!-- panico -->
     <string name="ingresa_placa">Ingresa la placa del autobús</string>
     <string name="texto_placa">Placa</string>
-     <string name="ruta_registro_vacio">Debes poner la placa</string>
+    <string name="ruta_registro_vacio">Debes poner la placa</string>
 
     <!-- Mapa -->
     <string name="mapa_espera">Un momento, te estamos localizando</string>
@@ -31,15 +30,12 @@
     <string name="notificar_chofer_familia">Gracias por reportar, hemos notificado al centro de mando y a tu contacto de seguridad.</string>
     <string name="notificar_chofer">Gracias por reportar, hemos notificado al centro de mando.</string>
     <string name="notificar_acceso_wifi">Para acceder al WiFi del autobus, da like al grupo de SafeBus y te enviaremos la contraseña</string>
-    <string name="gracias_por_compartir">
-En ese grupo podrás compartir mejor tu perspectiva sobre esta campaña y el servicio que se está dando en la línea de autobús.
- </string>
- <string name="gracias_por_compartir_banda">Para obtener la contraseña la próxima vez que hagas un viaje, te pediremos que califiques tu viaje una vez que bajes del autobús.</string>
+    <string name="gracias_por_compartir">En ese grupo podrás compartir mejor tu perspectiva sobre esta campaña y el servicio que se está dando en la línea de autobús.</string>
+    <string name="gracias_por_compartir_banda">Para obtener la contraseña la próxima vez que hagas un viaje, te pediremos que califiques tu viaje una vez que bajes del autobús.</string>
     <string name="gracias_por_realimentacion">Gracias por dar retroalimentación en tu viaje anterior. En un momento enviaremos la contraseña del WiFi. </string>
     <string name="safebus_menu_encuentra">Encuentra</string>
     <string name="safebus_menu_reporta">Reporta</string>
     <string name="safebus_menu_conecta">Conecta</string>
-
 
     <!-- Pagina 3 -->
     <string name="paginas_instrucciones_titulo_3">Contra la violencia</string>
@@ -66,19 +62,17 @@ En ese grupo podrás compartir mejor tu perspectiva sobre esta campaña y el ser
     <string name="alarma_enviando">Enviando alarma.</string>
     <string name="back_salir">Presiona una vez más para salir</string>
 
-
     <!-- conectar -->
     <string name="Pagina_liked">En un momento te enviaremos la contraseña</string>
 
-      <!-- Esperar -->
+    <!-- Esperar -->
     <string name="espere">espera, por favor ......</string>
-
 
     <!-- Califica bus -->
     <string name="califica_bus_tv_titulo_calif">¿Qué te pareció el viaje en el bus?</string>
     <string name="califica_bus_btn_aceptar">Aceptar</string>
-     <string name="califica_bus_et_comentario">Comentario</string>
-     <string name="Califica_taxi_0">Muy deficiente</string>
+    <string name="califica_bus_et_comentario">Comentario</string>
+    <string name="Califica_taxi_0">Muy deficiente</string>
     <string name="Califica_taxi_05">Deficiente</string>
     <string name="Califica_taxi_10">Muy mal</string>
     <string name="Califica_taxi_15">Mal</string>
@@ -89,6 +83,8 @@ En ese grupo podrás compartir mejor tu perspectiva sobre esta campaña y el ser
     <string name="Califica_taxi_40">Muy buen servicio</string>
     <string name="Califica_taxi_45">Excelente servicio</string>
     <string name="Califica_taxi_50">Servicio insuperable</string>
-
+    <string name="tel_inmujeres">55122792</string>
+    <string name="tel_casssp">52089898</string>
+    <string name="tel_policia">55335533</string>
 
 </resources>
