--- a/SafeBus/res/values/strings.xml
+++ b/SafeBus/res/values/strings.xml
@@ -53,6 +53,8 @@
     <!-- Registro -->
     <string name="main_agregar_contacto">Agregar Contacto</string>
     <string name="main_editar_contacto">Editar Contacto</string>
+    <string name="main_agregar_cas">Contactar CAS</string>
+    <string name="main_eliminar_cas">No contactar CAS</string>
     <string name="main_menu_acerca_de">Acerca de</string>
     <string name="main_menu_menu">Menu</string>
     <string name="registro_titulo">Contacto de emergencia</string>
